--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,5 @@
 github: []
-custom:
-  - 'https://paypal.me/selaris'
-  - 'https://coff.ee/asepsaputra'
-  - 'hhttps://ko-fi.com/asepsaputra'
-  - 'https://saweria.co/asepsp'
+
+ko_fi: asepsaputra
+buy_me_a_coffee: asepsaputra
+custom: ['https://saweria.co/asepsp', 'https://paypal.me/selaris']
